--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -10,5 +10,5 @@ display:
   source_url: "https://github.com/orbiously/secrets-manager-orb"
 
 # If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
-# orbs:
-#  hello: circleci/hello-build@0.0.5
+orbs:
+jq: circleci/jq@2.2.0
