--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ workflows:
       - orb-tools/review:
           filters: *filters
       - shellcheck/check:
+          exclude: "SC2005"
           filters: *filters
       - orb-tools/publish:
           orb-name: orbiously/secrets-manager
