--- a/src/commands/search.yml
+++ b/src/commands/search.yml
@@ -59,12 +59,12 @@ steps:
 
   - run:
       environment:
-        PARAM_VCS: << parameters.vcs >>
+        # PARAM_VCS: << parameters.vcs >>
         PARAM_CIRCLE_TOKEN: << parameters.circle-token >>
         PARAM_ORG_NAME: << parameters.org-name >>
-        SCRIPT_GET_PROJECTS_GITHUB: << include(scripts/github/get-github-projects.sh) >>
-        SCRIPT_GET_PROJECTS_BITBUCKET: << include(scripts/bitbucket/get-bitbucket-projects.sh) >>
-        SCRIPT_GET_PROJECTS_GITLAB: << include(scripts/gitlab/get-gitlab-projects.sh) >>
+        # SCRIPT_GET_PROJECTS_GITHUB: << include(scripts/github/get-github-projects.sh) >>
+        # SCRIPT_GET_PROJECTS_BITBUCKET: << include(scripts/bitbucket/get-bitbucket-projects.sh) >>
+        # SCRIPT_GET_PROJECTS_GITLAB: << include(scripts/gitlab/get-gitlab-projects.sh) >>
       name: Listing organization projects
       command: <<include(scripts/get-projects.sh)>>
 
