feat:(orb scripts): filtering out non-projects for GitHub and Bitbucket organizations
For GitHub and Bitbucket organizations, the response from the '/private/project?organization-id=***' endpoint also includes repositories that never were CircleCI projects. Filtering these out to avoid unnecessary API calls in later searches.

--- a/src/commands/search.yml
+++ b/src/commands/search.yml
@@ -59,7 +59,7 @@ steps:
 
   - run:
       environment:
-        # PARAM_VCS: << parameters.vcs >>
+        PARAM_VCS: << parameters.vcs >>
         PARAM_CIRCLE_TOKEN: << parameters.circle-token >>
         PARAM_ORG_NAME: << parameters.org-name >>
         # SCRIPT_GET_PROJECTS_GITHUB: << include(scripts/github/get-github-projects.sh) >>
